[package]
name = "reddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
tokio = { version = "1.37.0", features = ["full"] }
